# terp8or

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  index.html  pyproject.toml  refs.html  specs.html  terping.html
src/terp8or/: __init__.py
styles/: fonts.css  reset.css  root.css  site.css
